--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <script src="https://widget-flippit.herokuapp.com/flippit/index.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-  <link rel="icon" type="image/png" href="images/favicon.png">
-
+  <link rel="icon" type="image/png" href="images/favicon.ico">
 </head>
 
 <body>
